# lightda-examples

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.repos  README.md  lightda-examples.md.in  run-compiler-tests.sh
compiler-tests/: Dockerfile
compiler-tests/gcc/: Dockerfile
compiler-tests/gcc/10.2.0/: Dockerfile
compiler-tests/gcc/10.2.0/hdf5/: CMakeLists.txt
compiler-tests/gcc/hdf5/: CMakeLists.txt
compiler-tests/hdf5/: CMakeLists.txt
doc/: advect1d.md  index.md
examples/: CMakeLists.txt
examples/advect1d/: CMakeLists.txt  index.md  setup.py.in
examples/advect1d/advect1d/: advect1d.py  animate_mpi.py  enkf.py
examples/advect1d/src/: CMakeLists.txt  advect1d.f90  advect1d_assimilate_interfaces.F90  advect1d_forward_operator.F90  advect1d_localizer.F90  advect1d_observations.F90
examples/advect1d/superbuild/: CMakeLists.txt
src/: CMakeLists.txt
superbuild/: CMakeLists.txt  common_dependencies.cmake
superbuild/dependencies/: fortran_exceptions.cmake  hdf5.cmake  hdf5_exceptions.cmake  lightda-lenkf-rsm.cmake  lightda.cmake  system_mpi.cmake
tests/: CMakeLists.txt  advect1d_model_interface_tests.F90  model_interface_tests.f90
